checkout page modified

--- a/ar_shop/templates/checkout.html
+++ b/ar_shop/templates/checkout.html
@@ -2,6 +2,144 @@
 {% load static %}
 
 {% block content %}
+
+<div class="row p-3">
+    <div class="col-lg-6 p-2 m-2 ml-5 card">
+        <div class="billing-information-wrapper">
+            <form id="form">{% csrf_token %}
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>First Name</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>Last Name</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>Phone No.</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>Email Address</label>
+                            <input required type="email">
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12">
+                        <div class="billing-info">
+                            <label>Address</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>city</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>State/Province</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-info">
+                            <label>Zip/Postal Code</label>
+                            <input required type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="billing-select">
+                            <label>Country</label>
+                            <select>
+                                <option value="1">India</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="billing-back-btn pl-3">
+                        <div class="billing-btn">
+                            <button type="submit">Continue to payment</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="col-lg-5 p-2 m-2 ml-5 card">
+        <div class="order-review-wrapper">
+            <div class="order-review">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="width-1">Product Name</th>
+                                <th class="width-2">Price</th>
+                                <th class="width-3">Qty</th>
+                                <th class="width-4">Subtotal</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <div class="o-pro-dec">
+                                        <p>Fusce aliquam</p>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="o-pro-price">
+                                        <p>$236.00</p>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="o-pro-qty">
+                                        <p>2</p>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="o-pro-subtotal">
+                                        <p>$236.00</p>
+                                    </div>
+                                </td>
+                            </tr>                            
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="3">Subtotal </td>
+                                <td colspan="1">$4,001.00</td>
+                            </tr>
+                            <tr class="tr-f">
+                                <td colspan="3">Shipping & Handling (Flat Rate - Fixed</td>
+                                <td colspan="1">$45.00</td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">Grand Total</td>
+                                <td colspan="1">$4,722.00</td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+                <div class="billing-back-btn align-self-end">
+                    <span>
+                        Forgot an Item?
+                        <a href="#"> Edit Your Cart.</a>
+
+                    </span>
+                    <!-- <div class="billing-btn">
+                        <button type="submit">Continue</button>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     
     <!-- checkout-area start -->
     <div class="checkout-area pb-80 pt-100">
@@ -12,9 +150,9 @@
                         <div id="faq" class="panel-group">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h5 class="panel-title"><span>1.</span> <a data-toggle="collapse" data-parent="#faq" href="#payment-2">billing information</a></h5>
+                                    <h5 class="panel-title"><span>1.</span> <a data-parent="#faq" href="#payment-2">billing information</a></h5>
                                 </div>
-                                <div id="payment-2" class="panel-collapse collapse">
+                                <div id="payment-2">
                                     <div class="panel-body">
                                         <div class="billing-information-wrapper">
                                             <div class="row">
