--- a/ar_shop/templates/checkout.html
+++ b/ar_shop/templates/checkout.html
@@ -66,8 +66,9 @@
                     </div>
                     <div class="billing-back-btn pl-3">
                         <div class="billing-btn">
-                            <button type="submit">Continue to payment</button>
-                        </div>
+                            <button id="form-button" type="submit">Continue to payment</button>   
+                            <button id="payment-info" class="d-none" type="make-payment">Make payment</button>                         
+                        </div>                       
                     </div>
                 </div>
             </form>
@@ -140,6 +141,87 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    var shipping = '{{order.shipping}}'
+    var total = '{{order.get_cart_total}}'
+
+    if (user != 'AnonymousUser'){
+		 	document.getElementById('user-info').innerHTML = ''
+	}
+
+    if (shipping == 'False' && user != 'AnonymousUser') {
+        //Hide entire form if user is logged in and shipping is false
+        document.getElementById('form-button').classList.add("d-none");
+        //Show payment if logged in user wants to buy an item that does not require shipping
+        document.getElementById('payment-info').classList.remove("d-none");
+    }
+
+    var form = document.getElementById('form')
+    form.addEventListener('submit', function (e) {
+        e.preventDefault()
+        document.getElementById('form-button').classList.add("d-none");
+        document.getElementById('payment-info').classList.remove("d-none");
+    })
+
+    
+    document.getElementById('make-payment').addEventListener('click', function(e){
+        submitFormData()
+    })
+    
+
+    function submitFormData() {
+        var userFormData = {
+            'name': null,
+            'email': null,
+            'total': total,
+        }
+
+        var shippingInfo = {
+            'address': null,
+            'state': null,
+            'city': null,
+            'pincode': null,
+        }
+
+        if (shipping != 'False') {
+            shippingInfo.address = form.address.value
+            shippingInfo.state = form.state.value
+            shippingInfo.city = form.city.value
+            shippingInfo.pincode = form.pincode.value
+        }
+
+        if (user == 'AnonymousUser') {
+            userFormData.name = form.name.value
+            userFormData.email = form.email.value
+        }
+
+        console.log('Shipping Info:', shippingInfo)
+        console.log('User Info:', userFormData)
+
+        var url = "/process_order/"
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'applicaiton/json',
+                'X-CSRFToken': csrftoken,
+            },
+            body: JSON.stringify({ 'form': userFormData, 'shipping': shippingInfo }),
+
+        })
+            .then((response) => response.json())
+            .then((data) => {
+                console.log('Success:', data);
+                alert('Transaction completed');
+                cart = {}
+				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+                window.location.href = "{% url 'home' %}"
+
+            });
+    }
+</script>
+
+
     
     <!-- checkout-area start -->
     <div class="checkout-area pb-80 pt-100">
