--- a/ar_shop/templates/home.html
+++ b/ar_shop/templates/home.html
@@ -71,10 +71,10 @@
                                                 <p>{{product.description}}</p>
                                                 <div class="shop-list-cart-wishlist">
                                                     <a href="#" title="Wishlist"><i class="ion-android-favorite-outline"></i></a>
-                                                    <a href="#" title="Add To Cart"><i class="ion-ios-shuffle-strong"></i></a>
-                                                    <a href="#" data-target="#exampleModal" data-toggle="modal" title="Quick View">
+                                                    <a href="#" title="Add To Cart"><i class="ti-shopping-cart"></i></a>
+                                                    <!-- <a href="#" data-target="#exampleModal" data-toggle="modal" title="Quick View">
                                                         <i class="ion-ios-search-strong"></i>
-                                                    </a>
+                                                    </a> -->
                                                 </div>
                                             </div>
                                         </div>
